Spinner is now visible and gone after 5 secs / time related to async task

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,5 +5,14 @@
     android:name="com.cocoa.mediaplayer.MainFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cocoa.mediaplayer.MainActivity"
-    tools:deviceIds="tv" />
+    tools:context="com.cocoa.mediaplayer.MainActivity">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/lb_playback_other_rows_center_to_bottom"
+        android:layout_height="@dimen/lb_playback_other_rows_center_to_bottom"
+        android:layout_marginHorizontal="350dp"
+        android:layout_marginTop="100dp"
+        android:progressTint="#51AAFF" />
+</fragment>
